Снабдил логами все ключевые места